--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,15 @@
   <name>SampleProject</name>
   <url>http://maven.apache.org</url>
   
-  <properties>
+ <!-- <properties>
   <sonar.organization>bnasslahsen</sonar.organization>
   <sonar.projectKey>bnasslahsen_jenkins-sample</sonar.projectKey>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
- </properties>
+ </properties>-->
+  <properties>
+  <sonar.organization>romainvianef</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
   
   <dependencies>
     <dependency>
